[project]
name = "scholar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "huggingface-hub>=1.7.2",
    "marimo>=0.22.4",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "safetensors>=0.7.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.66.5",
    "transformers>=5.3.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"

[dependency-groups]
dev = [
    "marimo[recommended]>=0.20.4",
    "python-lsp-server[all]>=1.14.0",
    "ruff>=0.15.6",
    "zuban>=0.6.1",
]

[tool.marimo.runtime]
watcher_on_save = "autorun"
